--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,4 +3,11 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+  }
