--- a/frontend/src/pages/Calibration/Calibration.module.css
+++ b/frontend/src/pages/Calibration/Calibration.module.css
@@ -11,6 +11,8 @@
     cursor: pointer;
     justify-content: center;
     align-items: center;
+    z-index: 1000; 
+    pointer-events: auto;
     user-select: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border: 2px solid grey;
