--- a/frontend/src/pages/Registration/RegistrationPage.module.css
+++ b/frontend/src/pages/Registration/RegistrationPage.module.css
@@ -26,11 +26,12 @@
     align-items: center;
     justify-content: center;
     margin: 25px;
+    overflow-y: scroll;
 }
 
 .containerWrapper {
     max-width: 100vw;
-    width: 40%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -40,4 +41,5 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 25px;
 }
