--- a/frontend/src/pages/LandingPage/LandingPage.module.css
+++ b/frontend/src/pages/LandingPage/LandingPage.module.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 .container {
     min-height: 100vh;
     background-color: #f8f9fa;
@@ -12,7 +16,7 @@
     font-size: 2.5rem;
     font-weight: 600;
     font-style: italic;
-    color: #212529;
+    color: #2D404E;
     z-index: 1100;
   }
   
@@ -57,10 +61,12 @@
     background-color: white;
     padding: 10px;
     border-radius: 8px;
+    font-weight: 700;
   }
   
   .stepNumber {
     font-size: 1.8rem;
+    color: #2D404E;
   }
   
   .stepTitle {
