--- a/frontend/src/pages/Registration/RegistrationPage.module.css
+++ b/frontend/src/pages/Registration/RegistrationPage.module.css
@@ -3,11 +3,13 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-weight: 700;
+    color: #2D404E;
 }
 
 .content {
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    text-align: left;
+    font-style: italic;
 }
 
 .confirmPasswordWarning {
@@ -30,11 +32,14 @@
 }
 
 .containerWrapper {
-    max-width: 100vw;
     width: 70%;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    background-color: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15), 
+                0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .buttonGroup {
