--- a/frontend/src/pages/SignIn/SignInPage.module.css
+++ b/frontend/src/pages/SignIn/SignInPage.module.css
@@ -3,11 +3,24 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-weight: 700;
+    color: #2D404E;
   }
   
   .content {
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    text-align: left;
+  }
+
+  .contentWrapper {
+    max-width: 500px;
+  }
+
+  .headerWrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    align-items: center;
+    justify-content: center;
   }
   
   .confirmPasswordWarning {
