--- a/frontend/src/pages/Registration/RegistrationPage.module.css
+++ b/frontend/src/pages/Registration/RegistrationPage.module.css
@@ -4,12 +4,14 @@
     text-align: center;
     font-weight: 700;
     color: #2D404E;
+    margin-top: 35px;
 }
 
 .content {
     font-family: 'Roboto', sans-serif;
     text-align: left;
     font-style: italic;
+    color: #4a5568;
 }
 
 .confirmPasswordWarning {
@@ -27,7 +29,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 25px;
     overflow-y: scroll;
 }
 
@@ -36,15 +37,15 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    padding: 25px;
+    margin: 25px;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15), 
-                0 5px 15px rgba(0, 0, 0, 0.1);
+    0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .buttonGroup {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
 }
