--- a/frontend/src/pages/Questions/Questions.module.css
+++ b/frontend/src/pages/Questions/Questions.module.css
@@ -9,7 +9,7 @@
   
   .content {
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    text-align: left;
     color: #4a5568;
     margin-bottom: 20px;
   }
