--- a/frontend/src/pages/Registration/RegistrationPage.module.css
+++ b/frontend/src/pages/Registration/RegistrationPage.module.css
@@ -40,6 +40,7 @@
     margin: 25px;
     border-radius: 25px;
     box-shadow: 5px 5px 10px 10px rgba(0, 1, 0, 0.1);
+    height: 90%;
 }
 
 .buttonGroup {
