--- a/frontend/src/pages/SignIn/SignInPage.module.css
+++ b/frontend/src/pages/SignIn/SignInPage.module.css
@@ -16,6 +16,10 @@
     color: #4a5568;
   }
 
+  .formInput {
+    margin-bottom: 1.5rem !important;
+  }
+
   .contentWrapper {
     max-width: 500px;
   }
@@ -46,8 +50,7 @@
     gap: 15px;
     border-radius: 25px;
     box-shadow: 5px 5px 10px 10px rgba(0, 1, 0, 0.1);
-    padding-top: 65px;
-    padding-bottom: 65px;
+    height: 90%;
   }
   
   .celebrationContainer {
@@ -220,4 +223,85 @@
     to {
         text-shadow: 0 0 10px #f8d210;
     }
+}
+
+@media screen and (max-width: 1306px) {
+
+  .title {
+    font-size: 25px;
+  }
+  
+  .content {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+  }
+
+  .contentWrapper {
+    max-width: 450px;
+
+  }
+
+  .headerWrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .confirmPasswordWarning {
+    font-family: 'Roboto', sans-serif;
+    color: red;
+    font-size: 12px;
+    margin-left: 3px;
+    margin-top: 5px;
+  }
+  
+  .containerWrapper {
+    max-width: 100vw;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    border-radius: 25px;
+    box-shadow: 5px 5px 10px 10px rgba(0, 1, 0, 0.1);
+    height: 90%;
+  }
+
+  .submitButton {
+    width: 100%; 
+    max-width: 450px; 
+    margin: 0 auto; 
+    display: block; 
+  }
+
+  .formInput {
+    width: 100%; 
+    max-width: 450px; 
+    margin: 0 auto; 
+    display: block; 
+  }
+}
+
+@media screen and (max-width: 1190px) {
+
+  .title {
+    font-size: 22px;
+  }
+
+  .submitButton {
+    width: 100%; 
+    max-width: 400px; 
+    margin: 0 auto; 
+    display: block; 
+  }
+
+  .formInput {
+    width: 100%; 
+    max-width: 400px; 
+    margin: 0 auto; 
+    display: block; 
+  }
 }
